# Test2

./: .gitignore  .pdm-python  Dockerfile  Makefile  README.md  client.ini  client2.ini  feedamalgamator.yml  package.json  pyproject.toml  report.md  requirements.txt  sample_data.json  sonar-project.properties
.github/workflows/: lint.yml  main_FeedAmalgamator.yml  python-tests.yml  sonar-project.properties  static-analysis.yml
docs/: conf.py  feed_amalgamator.helpers.rst  index.rst
docs/_build/doctrees/: environment.pickle  feed_amalgamator.doctree  feed_amalgamator.helpers.doctree  feed_amalgamator.test_directory.doctree  index.doctree  modules.doctree
docs/_build/html/: .buildinfo  feed_amalgamator.helpers.html  feed_amalgamator.html  feed_amalgamator.test_directory.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  (+2 more)
feed_amalgamator/: CONFIG.py  __init__.py  auth.py  feed.py  schema.sql
feed_amalgamator/constants/: common_constants.py  error_messages.py
feed_amalgamator/feed_amalgamator/: __init__.py  auth.py  feed.py
feed_amalgamator/helpers/: constants.py  custom_exceptions.py  db_interface.py  error_handler.py  logging_helper.py  mastodon_data_interface.py  mastodon_oauth_interface.py
feed_amalgamator/static/: style.css
feed_amalgamator/templates/: base.html
prototypes/oauth_backend/: oauth_caller_PROTOTYPE.py
specs/: Architectural Decision Record.docx  Known Issues for Future Iterations.docx
src/oauth_backend/: oauth_caller_PROTOTYPE.py
tests/: test_auth_page.py  test_feed_page.py  test_mastodon_oauth_interface.py
(+33 files in other folders)
