[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Srinivas Raman", email = "srinivasraman18@gmail.com"},
    {name = "BugsBunny", email = "bugsbunny@gmail.com"},
    {name = "Brandon Wu",email = "brandonmwu888@gmail.com"},
    {name = "Vancheeswaran Vaidyanathan", email = "vigneshvanchy@gmail.com"},
    {name = "Samarth Bhadane", email = "samarthbhadane119@gmail.com"},
    {name = "Wei Jie CHIA",email = "wchia@ucsd.edu"},
]
dependencies = [
    "flask>=3.0.0",
    "Mastodon-py>=1.8.1",
    "ecs-logging==2.1.0",
    "Flask-SQLAlchemy==3.1.1",
    "coverage==7.3.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

